Novas telas adicionadas, cliente e transportadora

--- a/src/main/webapp/cadastroCliente.xhtml
+++ b/src/main/webapp/cadastroCliente.xhtml
@@ -91,7 +91,7 @@
 							
 			
 							<p:commandButton value="Salvar" id="salvar"
-								action="#{clienteBean.salvar}" style="margin-center:20px;" />
+								action="#{clienteBean.salvar}" style="margin-center:20px;" update="@form" />
 								
 							<p:commandButton value="Limpar" ajax="true" immediate="true"
 								type="reset" />	
