--- a/src/main/webapp/cadastroVendedor.xhtml
+++ b/src/main/webapp/cadastroVendedor.xhtml
@@ -95,6 +95,7 @@
 								update="@form" />
 
 							<p:commandButton value="Limpar" ajax="true" immediate="true"
+								action="#{vendedorBean.limpar}"
 								type="reset" />
 						</h:panelGrid>
 					</p:panel>
