--- a/src/main/webapp/listaTransportadora.xhtml
+++ b/src/main/webapp/listaTransportadora.xhtml
@@ -8,39 +8,35 @@
 <h:head>
 </h:head>
 <ui:composition template="/WEB-INF/template/template.xhtml">
-	<ui:define name="tituloJanela">Todos Vendedores</ui:define>
+	<ui:define name="tituloJanela">Todas Transportadoras</ui:define>
 	<ui:define name="conteudo">
-		<p:dataTable var="vendedor" value="#{vendedorBean.lista}"
+		<p:dataTable var="transporte" value="#{transporteBean.lista}"
 			frame="box" rules="all" cellpadding="3">
 			<f:facet name="header">
-				<p:commandButton value="Novo" action="cadastroVendedor.xhtml?faces-redirect=true" />
+				<p:commandButton value="Novo" action="cadastroTransportadora.xhtml?faces-redirect=true" />
 			</f:facet>
-			<p:column headerText="CPF">
-				<h:outputText value="#{vendedor.cpf}" />
+			<p:column headerText="CNPJ">
+				<h:outputText value="#{transporte.cnpj}" />
 			</p:column>
 
 			<p:column headerText="Nome">
-				<h:outputText value="#{vendedor.nome}" />
-			</p:column>
-			
-			<p:column headerText="Sobrenome">
-				<h:outputText value="#{vendedor.sobrenome}" />
+				<h:outputText value="#{transporte.nome}" />
 			</p:column>
 			
 			<p:column headerText="Estado">
-				<h:outputText value="#{vendedor.estado}" />
+				<h:outputText value="#{cliente.estado}" />
 			</p:column>
 
 			<p:column headerText="Ativo">
-				<h:outputText value="#{vendedor.ativo == true ? 'Ativo' : 'Desativado'}" />
+				<h:outputText value="#{cliente.ativo == true ? 'Ativo' : 'Desativado'}" />
 			</p:column>
 
 			<p:column headerText="Alterar">
-				<p:commandButton action="#{vendedorBean.alterar(vendedor)}"
+				<p:commandButton action="#{transporteBean.alterar(transporte)}"
 					value="Alterar" />
 			</p:column>
 			<p:column headerText="Excluir">
-				<p:commandButton action="#{vendedorBean.excluir(vendedor)}"
+				<p:commandButton action="#{transporteBean.excluir(transporte)}"
 					onclick="if (!confirm('Confirma a exclusão do vendedor?')) return false"
 					value="Excluir" />
 			</p:column>
