--- a/src/main/webapp/cadastroTransportadora.xhtml
+++ b/src/main/webapp/cadastroTransportadora.xhtml
@@ -73,7 +73,7 @@
 								
 			
 							<p:commandButton value="Salvar" id="salvar"
-								action="#{transporteBean.salvar}" style="margin-center:20px;" />
+								action="#{transporteBean.salvar}" style="margin-center:20px;" update="@form" />
 							
 							<p:commandButton value="Limpar" ajax="true" immediate="true"
 								type="reset" />
