Inclusão de novas telas e atualização cadastral funcionando corretamente

--- a/src/main/webapp/listaCliente.xhtml
+++ b/src/main/webapp/listaCliente.xhtml
@@ -15,6 +15,10 @@
 			<f:facet name="header">
 				<p:commandButton value="Novo" action="cadastroCliente.xhtml?faces-redirect=true" />
 			</f:facet>
+			<p:column headerText="ID">
+				<h:outputText value="#{cliente.id}" />
+			</p:column>
+			
 			<p:column headerText="CPF">
 				<h:outputText value="#{cliente.cpf}" />
 			</p:column>
@@ -39,11 +43,7 @@
 				<p:commandButton action="#{clienteBean.alterar(cliente)}"
 					value="Alterar" />
 			</p:column>
-			<p:column headerText="Excluir">
-				<p:commandButton action="#{clienteBean.excluir(cliente)}"
-					onclick="if (!confirm('Confirma a exclusão do vendedor?')) return false"
-					value="Excluir" />
-			</p:column>
+			
 		</p:dataTable>
 	</ui:define>
 </ui:composition>
