--- a/src/main/webapp/alterarVendedor.xhtml
+++ b/src/main/webapp/alterarVendedor.xhtml
@@ -88,7 +88,7 @@
 
 
 							<p:commandButton value="Salvar" id="salvar"
-								action="#{vendedorBean.salvar}"
+								action="#{vendedorBean.atualizarStauts}"
 								update="@form"/>
 
 						</h:panelGrid>
