--- a/src/main/webapp/listaTransportadora.xhtml
+++ b/src/main/webapp/listaTransportadora.xhtml
@@ -24,22 +24,18 @@
 			</p:column>
 			
 			<p:column headerText="Estado">
-				<h:outputText value="#{cliente.estado}" />
+				<h:outputText value="#{transporte.estado}" />
 			</p:column>
 
 			<p:column headerText="Ativo">
-				<h:outputText value="#{cliente.ativo == true ? 'Ativo' : 'Desativado'}" />
+				<h:outputText value="#{transporte.ativo == true ? 'Ativo' : 'Desativado'}" />
 			</p:column>
 
 			<p:column headerText="Alterar">
 				<p:commandButton action="#{transporteBean.alterar(transporte)}"
 					value="Alterar" />
 			</p:column>
-			<p:column headerText="Excluir">
-				<p:commandButton action="#{transporteBean.excluir(transporte)}"
-					onclick="if (!confirm('Confirma a exclusão do vendedor?')) return false"
-					value="Excluir" />
-			</p:column>
+	
 		</p:dataTable>
 	</ui:define>
 </ui:composition>
