--- a/src/main/webapp/listaProduto.xhtml
+++ b/src/main/webapp/listaProduto.xhtml
@@ -10,6 +10,7 @@
 <ui:composition template="/WEB-INF/template/template.xhtml">
 	<ui:define name="tituloJanela">Produtos</ui:define>
 	<ui:define name="conteudo">
+	<h:form>
 		<p:dataTable var="produto" value="#{produtoBean.lista}">
 			<f:facet name="header">
 				<p:outputLabel value="Produtos" />
@@ -41,6 +42,7 @@
 					value="Excluir" />
 			</p:column>
 		</p:dataTable>
+		</h:form>
 	</ui:define>
 </ui:composition>
 </html>
