Arrumando algumas bos

--- a/src/main/webapp/cadastroPlataforma.xhtml
+++ b/src/main/webapp/cadastroPlataforma.xhtml
@@ -12,10 +12,7 @@
 			<p:growl id="messages" idautoUpdate="true" life="3000" />
 			<div id="main" align="center">
 				<p:panelGrid columns="2" layout="grid"
-					styleClass="showcase-text-align-center">
-					<p:outputLabel value="Id" for="id" />
-					<p:inputText id="id" value="#{plataformaBean.plataforma.id}"
-						placeholder="Digite o id da plataforma" />
+					styleClass="showcase-text-align-center">		
 					<p:outputLabel value="Nome" for="nome" />
 					<p:inputText id="nome" value="#{plataformaBean.plataforma.nome}"
 						placeholder="Digite o nome da plataforma" />
@@ -25,7 +22,7 @@
 						placeholder="Digite a sigla do sku" />
 				</p:panelGrid>
 				<p:commandButton value="Salvar" action="#{plataformaBean.salvar()}"
-					update=":form1:messages, :form1"/>
+					update="@form"/>
 			</div>
 		</h:form>
 	</ui:define>
