Produto atualizando na tela

--- a/src/main/webapp/cadastroProduto.xhtml
+++ b/src/main/webapp/cadastroProduto.xhtml
@@ -10,6 +10,8 @@
 	<ui:define name="conteudo">
 		<h:form>
 			<p:growl id="messages" autoUpdate="true" life="3000" />
+			<h:inputHidden value="#{produtoBean.produto.id}" />
+			<h:inputHidden value="#{produtoBean.produto.sku}" />
 			<p:panelGrid columns="2" layout="grid">
 				<f:facet name="header">Dados do Produto</f:facet>
 				<f:facet name="footer">
