--- a/src/main/webapp/cadastroProduto.xhtml
+++ b/src/main/webapp/cadastroProduto.xhtml
@@ -8,8 +8,8 @@
 <ui:composition template="/WEB-INF/template/template.xhtml">
 	<ui:define name="tituloJanela">Dados do produto</ui:define>
 	<ui:define name="conteudo">
-		<h:form>
-			<p:growl id="messages" autoUpdate="true" life="3000" />
+		<h:form id="form" enctype="multipart/form-data">
+			<p:growl id="msg" autoUpdate="true" life="3000" />
 			<h:inputHidden value="#{produtoBean.produto.id}" />
 			<h:inputHidden value="#{produtoBean.produto.sku}" />
 			<p:panelGrid columns="2" layout="grid">
@@ -90,11 +90,11 @@
 						<p:outputLabel value="Ativo" for="ativo" />
 						<p:selectBooleanCheckbox id="ativo"
 							value="#{produtoBean.produto.ativo}" />
-						<p:outputLabel value="Capa do jogo" />
-						<p:fileUpload id="up" value="Imagem"
-							fileUploadListener="#{produtoBean.upload()}" mode="simple"
-							allowTypes="/(\.|\/)(gif|jpe?g|png)$/" sizeLimit="100000"
-							skinSimple="true" description="Selecione Imagens" update="imagem" />
+						<h:outputLabel value="Arquivo" for="arquivo" />
+						<h:inputFile id="arquivo" value="#{produtoBean.arquivo}"
+							required="true" label="Arquivo" />
+						<p:commandButton value="Importar"
+							update="msg" action="#{produtoBean.importa()}" />
 						<h:outputLabel value="Imagem selecionada" />
 						<p:graphicImage value="#{produtoBean.produto.imagem}" id="imagem"
 							style="width:150px;height:150px" cache="false" />
