--- a/src/main/webapp/loginCliente.xhtml
+++ b/src/main/webapp/loginCliente.xhtml
@@ -13,7 +13,8 @@
 	<h3 align="center">Fazer login</h3>
 	<h:form>
 		<p:growl autoUpdate="true" life="3000" />
-		<div id="main" align="center">
+		<div id="main" style="background: gray">
+		<p:graphicImage library="imagem" name="cogu.png"/>
 			<p:panelGrid columns="2" layout="grid"
 				styleClass="showcase-text-align-center">
 				<p:outputLabel value="E-mail" for="email" />
