--- a/src/main/webapp/listaProduto.xhtml
+++ b/src/main/webapp/listaProduto.xhtml
@@ -10,38 +10,53 @@
 <ui:composition template="/WEB-INF/template/template.xhtml">
 	<ui:define name="tituloJanela">Produtos</ui:define>
 	<ui:define name="conteudo">
-	<h:form>
-		<p:dataTable var="produto" value="#{produtoBean.lista}">
-			<f:facet name="header">
-				<p:outputLabel value="Produtos" />
-				<p:commandButton value="Novo" action="cadastroProduto.xhtml" />
-			</f:facet>
-			<p:column headerText="Nome" filterBy="#{produto.nome}" filterMatchMode="contains">
-				<h:outputText value="#{produto.nome}" />
-			</p:column>
-			<p:column headerText="SKU">
-				<h:outputText value="#{produto.sku}" />
-			</p:column>
-			<p:column headerText="EAN">
-				<h:outputText value="#{produto.EAN}" />
-			</p:column>
-			<p:column headerText="Valor">
-				<h:outputText value="#{produto.valor}" />
-			</p:column>
-			<p:column headerText="Ativo">
-				<h:outputText
-					value="#{produto.ativo == true ? 'Ativo' : 'Desativado'}" />
-			</p:column>
-			<p:column headerText="Alterar">
-				<p:commandLink action="#{produtoBean.alterar(produto)}"
-					value="Alterar" />
-			</p:column>
-			<p:column headerText="Excluir">
-				<p:commandButton action="#{produtoBean.excluir(produto)}"
-					onclick="if (!confirm('Confirma a exclusão da categoria?')) return false"
-					value="Excluir" />
-			</p:column>
-		</p:dataTable>
+		<h:form>
+			<p:dataTable id="tableProduto" var="produto"
+				value="#{produtoBean.lista}" frame="box" rules="all"
+				widgetVar="produtos" cellpadding="3">
+				<f:facet name="header">
+					<p:outputLabel value="Produtos" />
+					<p:commandButton value="Novo" action="cadastroProduto.xhtml" />
+				</f:facet>
+				<p:column headerText="Nome" filterBy="#{produto.nome}"
+					filterMatchMode="contains">
+					<h:outputText value="#{produto.nome}" />
+				</p:column>
+				<p:column headerText="SKU" filterBy="#{produto.sku}"
+					filterMatchMode="contains">
+					<h:outputText value="#{produto.sku}" />
+				</p:column>
+				<p:column headerText="EAN" filterBy="#{produto.EAN}"
+					filterMatchMode="contains">
+					<h:outputText value="#{produto.EAN}" />
+				</p:column>
+				<p:column headerText="Valor" filterBy="#{produto.valor}"
+					filterMatchMode="contains">
+					<h:outputText value="#{produto.valor}" />
+				</p:column>
+				<p:column headerText="Ativo"  filterBy="#{produto.ativo}"
+					filterMatchMode="equals">
+					<f:facet name="filter">
+						<p:selectOneButton onchange="PF('produtos').filter()"
+							styleClass="custom-filter">
+							<f:converter converterId="javax.faces.Boolean" />
+							<f:selectItem itemLabel="Ativo" itemValue="true" />
+							<f:selectItem itemLabel="-" itemValue="false" />
+						</p:selectOneButton>
+					</f:facet>
+					<h:outputText
+						value="#{produto.ativo == true ? 'Ativo' : 'Desativado'}" />
+				</p:column>
+				<p:column headerText="Alterar">
+					<p:commandButton action="#{produtoBean.alterar(produto)}"
+						value="Alterar" />
+				</p:column>
+				<p:column headerText="Excluir">
+					<p:commandButton action="#{produtoBean.excluir(produto)}"
+						onclick="if (!confirm('Confirma a exclusão da categoria?')) return false"
+						value="Excluir" />
+				</p:column>
+			</p:dataTable>
 		</h:form>
 	</ui:define>
 </ui:composition>
