--- a/src/main/webapp/atualizarProduto.xhtml
+++ b/src/main/webapp/atualizarProduto.xhtml
@@ -6,18 +6,23 @@
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:f="http://xmlns.jcp.org/jsf/core">
 <ui:composition template="/WEB-INF/template/template.xhtml">
-	<ui:define name="tituloJanela">Novo produto</ui:define>
+	<ui:define name="tituloJanela">Dados do produto</ui:define>
 	<ui:define name="conteudo">
 		<h:form id="form" enctype="multipart/form-data">
-			<p:growl id="msg" autoUpdate="true" life="3000" />	
+			<p:growl id="msg" autoUpdate="true" life="3000" />
+			<h:inputHidden value="#{produtoBean.produto.id}" />
+			<h:inputHidden value="#{produtoBean.produto.sku}" />
+			<h:inputHidden value="#{produtoBean.produto.dataCadastro}" />
+			<h:inputHidden value="#{produtoBean.produto.imagem}" />
 			<p:panelGrid columns="2" layout="grid">
-				<f:facet name="header">Novo produto</f:facet>
+				<f:facet name="header">Dados do Produto</f:facet>
 				<f:facet name="footer">
 					<p:panelGrid columns="2" layout="grid">
 						<p:commandButton value="Cancelar" id="btnCancelar"
 							immediate="true" action="listaProduto.xhtml?faces-redirect=true" />
 						<p:commandButton value="Salvar" id="btnSalvar"
-							action="#{produtoBean.salvar()}" ajax="false" update="@form" icon="pi pi-save" />
+							action="#{produtoBean.salvar()}" ajax="false" update="@form"
+							icon="pi pi-save" />
 					</p:panelGrid>
 				</f:facet>
 				<p:column>
@@ -88,12 +93,9 @@
 						<p:outputLabel value="Ativo" for="ativo" />
 						<p:selectBooleanCheckbox id="ativo"
 							value="#{produtoBean.produto.ativo}" />
-						<h:outputLabel value="Arquivo" for="arquivo" />
-						<h:inputFile id="arquivo" value="#{produtoBean.arquivo}"
-							 label="Arquivo" />
-						<p:commandButton value="Importar"
-							update="msg" ajax="false" action="#{produtoBean.importa()}" />
-						
+						<p:outputLabel value="Capa do jogo" />	
+						<p:graphicImage style="widht: 200px;height:175px;"
+							library="imagem" name="#{produtoBean.produto.imagem}" />
 					</p:panelGrid>
 				</p:column>
 			</p:panelGrid>
