Adicionado a tela do carrinho

--- a/src/main/webapp/loginAdministrador.xhtml
+++ b/src/main/webapp/loginAdministrador.xhtml
@@ -20,16 +20,16 @@
 					<p:panelGrid columns="2" layout="grid" styleClass="login">
 						<p:outputLabel value="E-mail" for="email" />
 						<p:inputText id="email"
-							value="#{administradorBean.administrador.email}"
+							value="#{UseAdmBean.administrador.email}"
 							placeholder="Digite seu e-mail" required="true" />
 						<p:outputLabel value="Senha" for="senha" />
 						<p:password id="senha"
-							value="#{administradorBean.administrador.senha}"
+							value="#{UseAdmBean.administrador.senha}"
 							placeholder="Digite sua senha" required="true" />
 						<p:commandButton value="Cadastro"
-							action="#{administradorBean.login()}" update="@form" />
+							action="#{UseAdmBean.login()}" update="@form" />
 						<p:commandButton value="Entrar"
-							action="#{administradorBean.login()}" update="@form" />
+							action="#{UseAdmBean.login()}" update="@form" />
 					</p:panelGrid>
 				</p:panelGrid>
 			</div>
