--- a/src/main/webapp/testeLogin.xhtml
+++ b/src/main/webapp/testeLogin.xhtml
@@ -12,7 +12,7 @@
 	<ui:define name="conteudo">
 		<h:form>
 			<p:growl autoUpdate="true" life="3000" />
-			<p:outputLabel value="#{administradorBean.administrador}" />
+			<p:outputLabel value="#{UseAdmBean.administrador}" />
 		</h:form>
 	</ui:define>
 </ui:composition>
