--- a/src/main/webapp/listaProduto.xhtml
+++ b/src/main/webapp/listaProduto.xhtml
@@ -11,13 +11,14 @@
 	<ui:define name="tituloJanela">Produtos</ui:define>
 	<ui:define name="conteudo">
 		<h:form>
+			<p:breadCrumb>
+				<p:menuitem value="Início" url="#" icon="pi pi-home"/>
+				<p:menuitem value="Produtos" url="#" />
+				<p:menuitem  url="cadastroProduto.xhtml?faces-redirect=true" title="Adicionar" icon="pi pi-plus"/>
+			</p:breadCrumb>
 			<p:dataTable id="tableProduto" var="produto"
 				value="#{produtoBean.lista}" frame="box" rules="all"
 				widgetVar="produtos" cellpadding="3">
-				<f:facet name="header">
-					<p:outputLabel value="Produtos" />
-					<p:commandButton value="Novo" action="cadastroProduto.xhtml" />
-				</f:facet>
 				<p:column headerText="Nome" filterBy="#{produto.nome}"
 					filterMatchMode="contains">
 					<h:outputText value="#{produto.nome}" />
