--- a/src/main/webapp/listaCategoria.xhtml
+++ b/src/main/webapp/listaCategoria.xhtml
@@ -8,19 +8,15 @@
 <ui:composition template="/WEB-INF/template/template.xhtml">
 	<ui:define name="tituloJanela">Categorias</ui:define>
 	<ui:define name="conteudo">
-		<h:form>
+		<h:form id="form">
+			<p:breadCrumb>
+				<p:menuitem value="Início" url="#" icon="pi pi-home" />
+				<p:menuitem value="Categorias" url="#" />
+				<p:menuitem url="cadastroCategoria.xhtml?faces-redirect=true"
+					title="Adicionar" icon="pi pi-plus" />
+			</p:breadCrumb>
 			<p:dataTable id="table" var="c" value="#{categoriaBean.lista}"
 				frame="box" rules="all" widgetVar="categorias" cellpadding="3">
-				<f:facet name="header">
-					<h2>Categorias</h2>
-					<p:commandButton value="Nova"
-						action="cadastroCategoria.xhtml?faces-redirect=true" />
-				</f:facet>
-				<p:column filterBy="#{c.id}" filterMatchMode="contains"
-					headerText="Id">
-					<h:outputText value="#{c.id}" />
-				</p:column>
-
 				<p:column filterBy="#{c.nome}" filterMatchMode="contains"
 					headerText="Nome">
 					<h:outputText value="#{c.nome}" />
@@ -32,9 +28,8 @@
 						<p:selectOneButton onchange="PF('categorias').filter()"
 							styleClass="custom-filter">
 							<f:converter converterId="javax.faces.Boolean" />
-							<f:selectItem itemLabel="Todos" itemValue="" />
-							<f:selectItem itemLabel="Ativo" itemValue="true" />
-							<f:selectItem itemLabel="Desativado" itemValue="false" />
+							<f:selectItem itemLabel="+" itemValue="true" />
+							<f:selectItem itemLabel="-" itemValue="false" />
 						</p:selectOneButton>
 					</f:facet>
 					<h:outputText value="#{c.ativo == true ? 'Ativo' : 'Desativado'}" />
