--- a/src/main/webapp/alterarAdministrador.xhtml
+++ b/src/main/webapp/alterarAdministrador.xhtml
@@ -11,6 +11,7 @@
 		<p:panel header="ALTERAR ADMINISTRADORES">
 			<h:form id="form1">
 				<p:growl id="msgs" autoUpdate="true" life="3000" />
+				<h:inputHidden value="#{administradorBean.administrador.id}" />
 				<div align="center">
 					<p:panel header="Dados Pessoais">
 						<h2 align="center">Alterar Administrador</h2>
