--- a/src/main/webapp/listaAdministrador.xhtml
+++ b/src/main/webapp/listaAdministrador.xhtml
@@ -10,41 +10,48 @@
 <ui:composition template="/WEB-INF/template/template.xhtml">
 	<ui:define name="tituloJanela">Todos Administradores</ui:define>
 	<ui:define name="conteudo">
-		<p:dataTable var="administrador" value="#{administradorBean.lista}"
-			frame="box" rules="all" cellpadding="3">
-			<f:facet name="header">
-				<p:commandButton value="Novo" action="cadastroAdministrador.xhtml?faces-redirect=true" />
-			</f:facet>
-			<p:column headerText="ID">
-				<h:outputText value="#{administrador.id}" />
-			</p:column>
-			
-			<p:column headerText="CPF">
-				<h:outputText value="#{administrador.cpf}" />
-			</p:column>
+		<h:form id="form">
+			<p:breadCrumb>
+				<p:menuitem value="Início" url="#" icon="pi pi-home" />
+				<p:menuitem value="Administradores" url="#" />
+				<p:menuitem url="cadastroAdministrador.xhtml?faces-redirect=true"
+					title="Adicionar" icon="pi pi-plus" />
+			</p:breadCrumb>
+			<p:dataTable var="administrador" value="#{administradorBean.lista}"
+				frame="box" rules="all" cellpadding="3">
+				<p:column headerText="ID">
+					<h:outputText value="#{administrador.id}" />
+				</p:column>
 
-			<p:column headerText="Nome">
-				<h:outputText value="#{administrador.nome}" />
-			</p:column>
-			
-			<p:column headerText="Sobrenome">
-				<h:outputText value="#{administrador.sobrenome}" />
-			</p:column>
-			
-			<p:column headerText="Estado">
-				<h:outputText value="#{administrador.estado}" />
-			</p:column>
+				<p:column headerText="CPF">
+					<h:outputText value="#{administrador.cpf}" />
+				</p:column>
 
-			<p:column headerText="Ativo">
-				<h:outputText value="#{administrador.ativo == true ? 'Ativo' : 'Desativado'}" />
-			</p:column>
+				<p:column headerText="Nome">
+					<h:outputText value="#{administrador.nome}" />
+				</p:column>
 
-			<p:column headerText="Alterar">
-				<p:commandButton action="#{administradorBean.alterar(administrador)}"
-					value="Alterar" />
-			</p:column>
-			
-		</p:dataTable>
+				<p:column headerText="Sobrenome">
+					<h:outputText value="#{administrador.sobrenome}" />
+				</p:column>
+
+				<p:column headerText="Estado">
+					<h:outputText value="#{administrador.estado}" />
+				</p:column>
+
+				<p:column headerText="Ativo">
+					<h:outputText
+						value="#{administrador.ativo == true ? 'Ativo' : 'Desativado'}" />
+				</p:column>
+
+				<p:column headerText="Alterar">
+					<p:commandButton
+						action="#{administradorBean.alterar(administrador)}"
+						value="Alterar" />
+				</p:column>
+
+			</p:dataTable>
+		</h:form>
 	</ui:define>
 </ui:composition>
 </html>
