--- a/src/main/webapp/listaCliente.xhtml
+++ b/src/main/webapp/listaCliente.xhtml
@@ -10,41 +10,47 @@
 <ui:composition template="/WEB-INF/template/template.xhtml">
 	<ui:define name="tituloJanela">Todos Clientes</ui:define>
 	<ui:define name="conteudo">
-		<p:dataTable var="cliente" value="#{clienteBean.lista}"
-			frame="box" rules="all" cellpadding="3">
-			<f:facet name="header">
-				<p:commandButton value="Novo" action="cadastroCliente.xhtml?faces-redirect=true" />
-			</f:facet>
-			<p:column headerText="ID">
-				<h:outputText value="#{cliente.id}" />
-			</p:column>
-			
-			<p:column headerText="CPF">
-				<h:outputText value="#{cliente.cpf}" />
-			</p:column>
+		<h:form id="form">
+			<p:breadCrumb>
+				<p:menuitem value="Início" url="#" icon="pi pi-home" />
+				<p:menuitem value="Clientes" url="#" />
+				<p:menuitem url="cadastroCliente.xhtml?faces-redirect=true"
+					title="Adicionar" icon="pi pi-plus" />
+			</p:breadCrumb>
+			<p:dataTable var="cliente" value="#{clienteBean.lista}" frame="box"
+				rules="all" cellpadding="3">
+				<p:column headerText="ID">
+					<h:outputText value="#{cliente.id}" />
+				</p:column>
 
-			<p:column headerText="Nome">
-				<h:outputText value="#{cliente.nome}" />
-			</p:column>
-			
-			<p:column headerText="Sobrenome">
-				<h:outputText value="#{cliente.sobrenome}" />
-			</p:column>
-			
-			<p:column headerText="Estado">
-				<h:outputText value="#{cliente.estado}" />
-			</p:column>
+				<p:column headerText="CPF">
+					<h:outputText value="#{cliente.cpf}" />
+				</p:column>
 
-			<p:column headerText="Ativo">
-				<h:outputText value="#{cliente.ativo == true ? 'Ativo' : 'Desativado'}" />
-			</p:column>
+				<p:column headerText="Nome">
+					<h:outputText value="#{cliente.nome}" />
+				</p:column>
 
-			<p:column headerText="Alterar">
-				<p:commandButton action="#{clienteBean.alterar(cliente)}"
-					value="Alterar" />
-			</p:column>
-			
-		</p:dataTable>
+				<p:column headerText="Sobrenome">
+					<h:outputText value="#{cliente.sobrenome}" />
+				</p:column>
+
+				<p:column headerText="Estado">
+					<h:outputText value="#{cliente.estado}" />
+				</p:column>
+
+				<p:column headerText="Ativo">
+					<h:outputText
+						value="#{cliente.ativo == true ? 'Ativo' : 'Desativado'}" />
+				</p:column>
+
+				<p:column headerText="Alterar">
+					<p:commandButton action="#{clienteBean.alterar(cliente)}"
+						value="Alterar" />
+				</p:column>
+
+			</p:dataTable>
+		</h:form>
 	</ui:define>
 </ui:composition>
 </html>
