--- a/src/main/webapp/listaCliente.xhtml
+++ b/src/main/webapp/listaCliente.xhtml
@@ -13,7 +13,7 @@
 		<h:form id="form">
 			<p:breadCrumb>
 				<p:menuitem value="Início" url="#" icon="pi pi-home" />
-				<p:menuitem value="Clientes" url="#" />
+				<p:menuitem value="Clientes" url="listaCliente.xhtml?faces-redirect=true" />
 				<p:menuitem url="cadastroCliente.xhtml?faces-redirect=true"
 					title="Adicionar" icon="pi pi-plus" />
 			</p:breadCrumb>
