--- a/src/main/webapp/cadastroProduto.xhtml
+++ b/src/main/webapp/cadastroProduto.xhtml
@@ -9,7 +9,7 @@
 	<ui:define name="tituloJanela">Novo produto</ui:define>
 	<ui:define name="conteudo">
 		<h:form id="form" enctype="multipart/form-data">
-			<p:growl id="msg" autoUpdate="true" life="3000" />	
+			<p:growl id="msg" autoUpdate="true" life="3000" />
 			<p:panelGrid columns="2" layout="grid">
 				<f:facet name="header">Novo produto</f:facet>
 				<f:facet name="footer">
@@ -17,7 +17,8 @@
 						<p:commandButton value="Cancelar" id="btnCancelar"
 							immediate="true" action="listaProduto.xhtml?faces-redirect=true" />
 						<p:commandButton value="Salvar" id="btnSalvar"
-							action="#{produtoBean.salvar()}" ajax="false" update="@form" icon="pi pi-save" />
+							action="#{produtoBean.salvar()}" ajax="false" update="@form"
+							icon="pi pi-save" />
 					</p:panelGrid>
 				</f:facet>
 				<p:column>
@@ -90,10 +91,9 @@
 							value="#{produtoBean.produto.ativo}" />
 						<h:outputLabel value="Arquivo" for="arquivo" />
 						<h:inputFile id="arquivo" value="#{produtoBean.arquivo}"
-							 label="Arquivo" />
-						<p:commandButton value="Importar"
-							update="msg" ajax="false" action="#{produtoBean.importa()}" />
-						
+							label="Arquivo" />
+						<p:commandButton value="Importar" update="msg" ajax="false"
+							action="#{produtoBean.importa()}" />
 					</p:panelGrid>
 				</p:column>
 			</p:panelGrid>
