--- a/src/main/webapp/carrinhoCliente.xhtml
+++ b/src/main/webapp/carrinhoCliente.xhtml
@@ -6,29 +6,6 @@
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:f="http://xmlns.jcp.org/jsf/core">
 <h:head>
-	<style type="text/css">
-/*demo*/
-.ui-dataview-list .ui-dataview-row {
-	border-bottom: 1px solid #A8A8A8;
-	padding: 25px 10px;
-	/* with the exported variables from Nova and Luna Themes*/
-	border-bottom-color: var(- -input-border-color, #A8A8A8);
-}
-
-.image {
-	width: 75px;
-	height: 75px;
-}
-
-.logo {
-	width: 5%;
-}
-
-.detail {
-	width: 85%;
-	padding-left: 25px;
-}
-</style>
 </h:head>
 <ui:composition template="/WEB-INF/template/template.xhtml">
 	<ui:define name="tituloJanela">Cadastro administrador</ui:define>
@@ -37,6 +14,7 @@
 			<p:growl id="msg" autoUpdate="true" life="3000" />
 			<p:dataView var="produto" value="#{produtoBean.lista}"
 				gridIcon="pi pi-th-large" listIcon="pi pi-bars">
+				<f:facet name="header"> fwe</f:facet>
 				<p:dataViewGridItem>
 					<p:panel header="#{produto.nome}" style="text-align:center">
 						<h:panelGrid columns="1" style="width:100%">
